Bug 76810: Buttons are not properly visible in home employee - mobile version

--- a/mydesk/src/pages/HomePage/Homepage.module.scss
+++ b/mydesk/src/pages/HomePage/Homepage.module.scss
@@ -255,4 +255,8 @@
     background: rgb(92, 177, 184);
     padding: 5px;
   }
+
+  .tealBtn {
+    background-color: rgb(70 150 157);
+  }
 }
